Commit css and featured pages

--- a/pages/markets-featured-environment.html
+++ b/pages/markets-featured-environment.html
@@ -302,6 +302,8 @@
                                             </a>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="col-sm-6">
                                         <div class="related-img">
                                             <a href="enviro/enviro.html"><img src="../images/services/12_structural.jpg" name="enviro" alt="">
@@ -317,6 +319,8 @@
                                             </a>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="col-sm-6">
                                         <div class="related-img">
                                             <a href="enviro/enviro.html"><img src="../images/services/02_geotech.jpg" name="enviro" alt="">
@@ -332,6 +336,8 @@
                                             </a>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="col-sm-6">
                                         <div class="related-img">
                                             <a href="enviro/enviro.html"><img src="../images/services/05_marine.jpg" name="enviro" alt="">
@@ -348,6 +354,8 @@
                                             </a>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="col-sm-6">
                                         <div class="related-img">
                                             <a href="enviro/enviro.html"><img src="../images/services/24_floodgrants.jpg" name="enviro" alt="">
@@ -364,6 +372,8 @@
                                             </a>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="col-sm-6">
                                         <div class="related-img">
                                             <a href="enviro/enviro.html"><img src="../images/services/06_landsurvey.jpg" name="enviro" alt="">
@@ -379,6 +389,8 @@
                                             </a>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="col-sm-6">
                                         <div class="related-img">
                                             <a href="enviro/enviro.html"><img src="../images/services/17_hdlaser.jpg" name="enviro" alt="">
