--- a/pages/markets-featured-resiliency+water.html
+++ b/pages/markets-featured-resiliency+water.html
@@ -303,6 +303,8 @@
                                             </a>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="col-sm-6">
                                         <div class="related-img">
                                             <a href="enviro/enviro.html"><img src="../images/services/12_structural.jpg" name="enviro" alt="">
@@ -318,6 +320,8 @@
                                             </a>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="col-sm-6">
                                         <div class="related-img">
                                             <a href="enviro/enviro.html"><img src="../images/services/02_geotech.jpg" name="enviro" alt="">
@@ -333,6 +337,8 @@
                                             </a>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="col-sm-6">
                                         <div class="related-img">
                                             <a href="enviro/enviro.html"><img src="../images/services/05_marine.jpg" name="enviro" alt="">
@@ -349,6 +355,8 @@
                                             </a>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="col-sm-6">
                                         <div class="related-img">
                                             <a href="enviro/enviro.html"><img src="../images/services/24_floodgrants.jpg" name="enviro" alt="">
@@ -365,6 +373,8 @@
                                             </a>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="col-sm-6">
                                         <div class="related-img">
                                             <a href="enviro/enviro.html"><img src="../images/services/06_landsurvey.jpg" name="enviro" alt="">
@@ -380,6 +390,8 @@
                                             </a>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="col-sm-6">
                                         <div class="related-img">
                                             <a href="enviro/enviro.html"><img src="../images/services/17_hdlaser.jpg" name="enviro" alt="">
