--- a/pages/markets-featured-transportation.html
+++ b/pages/markets-featured-transportation.html
@@ -301,6 +301,8 @@
                                             </a>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="col-sm-6">
                                         <div class="related-img">
                                             <a href="enviro/enviro.html"><img src="../images/services/12_structural.jpg" name="enviro" alt="">
@@ -316,6 +318,8 @@
                                             </a>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="col-sm-6">
                                         <div class="related-img">
                                             <a href="enviro/enviro.html"><img src="../images/services/02_geotech.jpg" name="enviro" alt="">
@@ -331,6 +335,8 @@
                                             </a>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="col-sm-6">
                                         <div class="related-img">
                                             <a href="enviro/enviro.html"><img src="../images/services/05_marine.jpg" name="enviro" alt="">
@@ -347,6 +353,8 @@
                                             </a>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="col-sm-6">
                                         <div class="related-img">
                                             <a href="enviro/enviro.html"><img src="../images/services/24_floodgrants.jpg" name="enviro" alt="">
@@ -363,6 +371,8 @@
                                             </a>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="col-sm-6">
                                         <div class="related-img">
                                             <a href="enviro/enviro.html"><img src="../images/services/06_landsurvey.jpg" name="enviro" alt="">
@@ -378,6 +388,8 @@
                                             </a>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="col-sm-6">
                                         <div class="related-img">
                                             <a href="enviro/enviro.html"><img src="../images/services/17_hdlaser.jpg" name="enviro" alt="">
