Home page carousel changed

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/owl.carousel.min.css" rel="stylesheet">
+    <link href="css/subtle-slideshow.css" rel="stylesheet" />
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/style-new.css" rel="stylesheet">
 
@@ -178,56 +179,31 @@
     <!--=========Header Section Ends=========-->
     <!--=========Banner Section=========-->
     <section class="banner">
-        <div class="owl-carousel" id="owl-carousel">
-            <div class="item" data-class="">
-                <img src="images/pano/banner-placeholder.png">
-                <div class="banner-content">
-                    <div class="banner-img-two bg-img" style=" background-image: url(images/pano/marsh.jpg);"></div>
-                </div>
-            </div>
-            <div class="item" data-class="transportation">
-                <img src="images/pano/banner-placeholder.png">
-                <div class="banner-content">
-                    <div class="banner-img-one bg-img" style="background-image: url(images/pano/subway.jpg)"></div>
-                </div>
-            </div>
-            <div class="item" data-class="environment">
-                <img src="images/pano/banner-placeholder.png">
-                <div class="banner-content">
-                    <div class="banner-img-four bg-img" style="background-image: url(images/pano/tcesua.jpg);"></div>
-                </div>
-            </div>
-            <div class="item" data-class="resiliency-water">
-                <img src="images/pano/banner-placeholder.png">
-                <div class="banner-content">
-                    <div class="banner-img-five bg-img" style="background-image: url(images/pano/port.jpg);"></div>
-                </div>
-            </div>
-            <div class="item" data-class="">
-                <img src="images/pano/banner-placeholder.png">
-                <div class="banner-content">
-                    <div class="banner-img-six bg-img" style="background-image: url(images/pano/sw.jpg);"></div>
-                </div>
-            </div>
-            <div class="item" data-class="energy">
-                <img src="images/pano/banner-placeholder.png">
-                <div class="banner-content">
-                    <div class="banner-img-three bg-img" style="background-image: url(images/pano/puertorico.jpg);">
-                    </div>
-                </div>
-            </div>
-            <div class="item" data-class="cities-communities">
-                <img src="images/pano/banner-placeholder.png">
-                <div class="banner-content">
-                    <div class="banner-img-three bg-img" style="background-image: url(images/pano/nycity.jpg);"></div>
-                </div>
-            </div>
-            <div class="item" data-class="industry">
-                <img src="images/pano/banner-placeholder.png">
-                <div class="banner-content">
-                    <div class="banner-img-seven bg-img" style="background-image: url(images/pano/pipeline.jpg);"></div>
-                </div>
-            </div>
+        <div id="slides">
+            <a class="slide" href="#" data-class="">
+                <span class="animate in" style="background-image: url(images/pano/marsh.jpg)"></span>
+            </a>
+            <a class="slide" href="#" data-class="transportation">
+                <span class="animate in" style="background-image: url(images/pano/subway.jpg)"></span>
+            </a>
+            <a class="slide" href="#" data-class="environment">
+                <span class="animate in" style="background-image: url(images/pano/tcesua.jpg)"></span>
+            </a>
+            <a class="slide" href="#" data-class="resiliency-water">
+                <span class="animate in" style="background-image: url(images/pano/port.jpg)"></span>
+            </a>
+            <a class="slide" href="#" data-class="">
+                <span class="animate in" style="background-image: url(images/pano/sw.jpg)"></span>
+            </a>
+            <a class="slide" href="#" data-class="energy">
+                <span class="animate in" style="background-image: url(images/pano/puertorico.jpg)"></span>
+            </a>
+            <a class="slide" href="#" data-class="cities-communities">
+                <span class="animate in" style="background-image: url(images/pano/nycity.jpg)"></span>
+            </a>
+            <a class="slide" href="#" data-class="industry">
+                <span class="animate in" style="background-image: url(images/pano/pipeline.jpg)"></span>
+            </a>
         </div>
         <div class="banner-desc">
             <p>Solving national & global challenges <br>in water, climate change, energy, <br>transportation & infrastructure requires <br>engineering & scientific ingenuity. <br>That’s Matrix.<a href="pages/markets.html">FEATURED
@@ -240,7 +216,10 @@
     <script src="js/owl.carousel.min.js"></script>
     <script type="text/javascript" src="rotator/js/jquery.easing.1.3.min.js"></script>
     <script type="text/javascript" src="rotator/js/jquery.wt-rotator.min.js"></script>
+    <script src="js/jquery.subtle-slideshow.js"></script>
     <script src="js/custom.js"></script>
+    <script>
+    </script>
 </body>
 
 </html>
