--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                 <img src="images/misc_images/matrixlogomobile.png" class="hidden-logo" alt="logo">
                                 <img src="images/misc_images/matrixlogomobile.png" class="visible-logo" alt="logo">
                             </a>
-                            <a class="navbar-brand logo logo-subtext" href="pages/services.html" title="Matrix New World">
+                            <a class="navbar-brand logo logo-subtext" href="pages/markets.html" title="Matrix New World">
                                 <span>engineering progress</span>
                             </a>
                         </div>
@@ -219,6 +219,14 @@
     <script src="js/jquery.subtle-slideshow.js"></script>
     <script src="js/custom.js"></script>
     <script>
+        $('#slides').slideshow({
+            randomize: false, // Randomize the play order of the slides.
+            slideDuration: 5000, // Duration of each induvidual slide.
+            fadeDuration: 1000, // Duration of the fading transition. Should be shorter than slideDuration.
+            animate: true, // Turn css animations on or off.
+            pauseOnTabBlur: false, // Pause the slideshow when the tab is out of focus. This prevents glitches with setTimeout().
+            enableLog: false // Enable log messages to the console. Useful for debugging.
+        });
     </script>
 </body>
 
