--- a/pages/markets.html
+++ b/pages/markets.html
@@ -94,7 +94,7 @@
                                 <img src="../images/misc_images/matrixlogomobile.png" class="hidden-logo" alt="logo">
                                 <img src="../images/misc_images/matrixlogomobile.png" class="visible-logo" alt="logo">
                             </a>
-                            <a class="navbar-brand logo logo-subtext" href="services.html" title="Matrix New World">
+                            <a class="navbar-brand logo logo-subtext" href="markets.html" title="Matrix New World">
                                 <span>engineering progress</span>
                             </a>
                         </div>
