--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                 <img src="images/misc_images/matrixlogomobile.png" class="visible-logo" alt="logo">
                             </a>
                             <a class="navbar-brand logo logo-subtext" href="pages/markets.html" title="Matrix New World">
-                                <span>engineering progress</span>
+                                <span>engineering progress ></span>
                             </a>
                         </div>
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
