--- a/pages/markets-featured-transportation.html
+++ b/pages/markets-featured-transportation.html
@@ -95,7 +95,7 @@
                                 <img src="../images/misc_images/matrixlogomobile.png" class="visible-logo" alt="logo">
                             </a>
                             <a class="navbar-brand logo logo-subtext" href="markets.html" title="Matrix New World">
-                                <span>engineering progress</span>
+                                <span>engineering progress ></span>
                             </a>
                         </div>
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
