--- a/index.html
+++ b/index.html
@@ -179,7 +179,58 @@
     <!--=========Header Section Ends=========-->
     <!--=========Banner Section=========-->
     <section class="banner">
-        <div id="slides">
+        <div class="owl-carousel" id="owl-carousel">
+            <div class="item" data-class="">
+                <img src="images/pano/banner-placeholder.png">
+                <div class="banner-content">
+                    <div class="banner-img-two bg-img" style=" background-image: url(images/pano/marsh.jpg);"></div>
+                </div>
+            </div>
+            <div class="item" data-class="transportation">
+                <img src="images/pano/banner-placeholder.png">
+                <div class="banner-content">
+                    <div class="banner-img-one bg-img" style="background-image: url(images/pano/subway.jpg)"></div>
+                </div>
+            </div>
+            <div class="item" data-class="environment">
+                <img src="images/pano/banner-placeholder.png">
+                <div class="banner-content">
+                    <div class="banner-img-four bg-img" style="background-image: url(images/pano/tcesua.jpg);"></div>
+                </div>
+            </div>
+            <div class="item" data-class="resiliency-water">
+                <img src="images/pano/banner-placeholder.png">
+                <div class="banner-content">
+                    <div class="banner-img-five bg-img" style="background-image: url(images/pano/port.jpg);"></div>
+                </div>
+            </div>
+            <div class="item" data-class="">
+                <img src="images/pano/banner-placeholder.png">
+                <div class="banner-content">
+                    <div class="banner-img-six bg-img" style="background-image: url(images/pano/sw.jpg);"></div>
+                </div>
+            </div>
+            <div class="item" data-class="energy">
+                <img src="images/pano/banner-placeholder.png">
+                <div class="banner-content">
+                    <div class="banner-img-three bg-img" style="background-image: url(images/pano/puertorico.jpg);">
+                    </div>
+                </div>
+            </div>
+            <div class="item" data-class="cities-communities">
+                <img src="images/pano/banner-placeholder.png">
+                <div class="banner-content">
+                    <div class="banner-img-three bg-img" style="background-image: url(images/pano/nycity.jpg);"></div>
+                </div>
+            </div>
+            <div class="item" data-class="industry">
+                <img src="images/pano/banner-placeholder.png">
+                <div class="banner-content">
+                    <div class="banner-img-seven bg-img" style="background-image: url(images/pano/pipeline.jpg);"></div>
+                </div>
+            </div>
+        </div>
+        <!-- <div id="slides">
             <a class="slide" href="#" data-class="">
                 <span class="animate in" style="background-image: url(images/pano/marsh.jpg)"></span>
             </a>
@@ -204,7 +255,7 @@
             <a class="slide" href="#" data-class="industry">
                 <span class="animate in" style="background-image: url(images/pano/pipeline.jpg)"></span>
             </a>
-        </div>
+        </div> -->
         <div class="banner-desc">
             <p>Solving national & global challenges <br>in water, climate change, energy, <br>transportation & infrastructure requires <br>engineering & scientific ingenuity. <br>That’s Matrix.<a href="pages/markets.html">FEATURED
                     PROJECTS &gt; </a></p>
@@ -216,9 +267,9 @@
     <script src="js/owl.carousel.min.js"></script>
     <script type="text/javascript" src="rotator/js/jquery.easing.1.3.min.js"></script>
     <script type="text/javascript" src="rotator/js/jquery.wt-rotator.min.js"></script>
-    <script src="js/jquery.subtle-slideshow.js"></script>
+    <!-- <script src="js/jquery.subtle-slideshow.js"></script> -->
     <script src="js/custom.js"></script>
-    <script>
+    <!-- <script>
         $('#slides').slideshow({
             randomize: false, // Randomize the play order of the slides.
             slideDuration: 5000, // Duration of each induvidual slide.
@@ -227,7 +278,7 @@
             pauseOnTabBlur: false, // Pause the slideshow when the tab is out of focus. This prevents glitches with setTimeout().
             enableLog: false // Enable log messages to the console. Useful for debugging.
         });
-    </script>
+    </script> -->
 </body>
 
 </html>
